--- a/Muc/app/src/main/AndroidManifest.xml
+++ b/Muc/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".ui.music.play.ListplayActivity"></activity>
         <activity android:name=".ui.home.LoginActivity"></activity>
         <activity android:name=".ui.home.SignActivity"></activity>
+        <activity android:name=".ui.music.play.AddCommentActivity"></activity>
+        <activity android:name=".ui.music.play.CommentActivity"></activity>
     </application>
 
 </manifest>
