--- a/MucMucServer/src/main/resources/application-dev.yml
+++ b/MucMucServer/src/main/resources/application-dev.yml
@@ -2,6 +2,9 @@
 #端口
 server:
   port: 8082
+  max-http-header-size: 4048576
+  tomcat:
+    max-http-form-post-size: 32MB #请求长度
 #数据库
 spring:
   datasource:
@@ -10,3 +13,8 @@ spring:
     url: jdbc:mysql://localhost:3306/db_mucmuc
     username: root
     password: 18487997
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 32MB  #单个文件的最大上限
+      max-request-size: 32MB #单个请求的文件总大小上限
