--- a/Muc/app/build.gradle
+++ b/Muc/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation files('libs/fastjson-1.2.62.jar')
+    implementation files('libs/commons-codec-1.13.jar')
 }
