--- a/Muc/app/src/main/AndroidManifest.xml
+++ b/Muc/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".ui.found.TagActivity"></activity>
         <activity android:name=".ui.music.play.AddCommentActivity"></activity>
         <activity android:name=".ui.music.play.CommentActivity"></activity>
+        <activity android:name=".ui.home.SearchActivity"></activity>
     </application>
 
 </manifest>
