--- a/Muc/app/src/main/AndroidManifest.xml
+++ b/Muc/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".ui.music.play.CommentActivity"></activity>
         <activity android:name=".ui.home.SearchActivity"></activity>
         <activity android:name=".ui.account.ModifyActivity"></activity>
+        <activity android:name=".ui.account.PasswordActivity"></activity>
     </application>
 
 </manifest>
