--- a/Muc/app/src/main/AndroidManifest.xml
+++ b/Muc/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ui.music.play.AddCommentActivity"></activity>
         <activity android:name=".ui.music.play.CommentActivity"></activity>
         <activity android:name=".ui.home.SearchActivity"></activity>
+        <activity android:name=".ui.music.AddSongActivity"></activity>
     </application>
 
 </manifest>
