--- a/MucMucServer/src/main/resources/application-dev.yml
+++ b/MucMucServer/src/main/resources/application-dev.yml
@@ -10,9 +10,9 @@ spring:
   datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_mucmuc
+    url: jdbc:mysql://localhost:3306/mucmuc3
     username: root
-    password: 18487997
+    password: 123456
   servlet:
     multipart:
       enabled: true
